add mars with rent flow and news board (#416)
* use better asset workflow

* add history ui, handle relevant stripe events

* add scheduler and recurring rent payment creation

* use timbre with middleware instead of wrapper fns

* refactor async event logic to be more simple

* complete mars rent flow